--- a/lambdaacademy/school/templates/school/pages/base.html
+++ b/lambdaacademy/school/templates/school/pages/base.html
@@ -6,6 +6,10 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+    <meta name="description" content="">
+    <meta name="author" content="">
+    
     {% block page_title %}
       <title>{% include 'school/objects/page_title.html' %}</title>
     {% endblock %}
@@ -14,6 +18,12 @@
     <link href="{% static "bootstrap/css/bootstrap.min.css" %}" rel="stylesheet">
 
     <link href="{% static "school/css/school.css" %}" rel="stylesheet">
+    <link href="{% static  "jquery/jquery.timepicker.css" %}" rel="stylesheet" type="text/css"/>
+    <link rel="shortcut icon" type="image/png" href="{% static "school/images/favicon.ico" %}"/>
+
+    <link href='http://fonts.googleapis.com/css?family=Lobster+Two:400,400italic' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Great+Vibes' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Cardo:400,400italic' rel='stylesheet' type='text/css'>
     
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -23,13 +33,23 @@
     <![endif]-->
   </head>
   <body>
+    <div class="wrap">
 
-    {% block content %}
-    {% endblock %}
+      {% block nav_bar %}
+        {% include 'school/objects/nav.html' %}
+      {% endblock %}
+
+      {% block content %}
+      {% endblock %}
     
+    </div>
+
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="{% static "jquery/jquery-2.1.4.min.js" %}"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
+    <script type="text/javascript" src="{% static "jquery/jquery.timepicker.js" %}"></script>
+
     <script src="{% static "bootstrap/js/bootstrap.min.js" %}"></script>
+    <script src="{% static "school/js/school.js" %}"></script>
   </body>
 </html>
