--- a/lambdaacademy/school/templates/school/pages/home.html
+++ b/lambdaacademy/school/templates/school/pages/home.html
@@ -1,9 +1,27 @@
 {% extends 'school/pages/base.html' %}
 
-{% load staticfiles %}
-
 {% block content %}
 
-<img src="{% static "school/images/test.png" %}" >
+<div class="container">
+
+<div class="starter-template">
+	{% for module in all_modules %}
+	{% if forloop.counter0|divisibleby:'4' %}<div class="row">{% endif %}
+  		<div class="col-sm-6 col-md-3">
+    		<div class="thumbnail module-thumbnail">
+      			<img src="{{ MEDIA_URL }}{{ module.image_file.url }}">
+      			<div class="caption">
+      				<h3 class="module-header">{{ module.name }}</h3>
+      				<p class="lead module-description">{{ module.short_description }}</p>
+        			<p><a class="btn btn-primary btn-block" href="/{{ module.id }}/" role="button">Learn more »</a></p>
+      			</div>
+    		</div>
+    	</div>
+  	{% if forloop.counter|divisibleby:'4' %}</div>{% endif %}
+  	{% endfor %}
+</div>
+
+
+</div><!-- /.container -->
 
 {% endblock %}
