--- a/lambdaacademy/school/templates/school/pages/base.html
+++ b/lambdaacademy/school/templates/school/pages/base.html
@@ -21,9 +21,9 @@
     <link href="{% static  "jquery/jquery.timepicker.css" %}" rel="stylesheet" type="text/css"/>
     <link rel="shortcut icon" type="image/png" href="{% static "school/images/favicon.ico" %}"/>
 
-    <link href='http://fonts.googleapis.com/css?family=Lobster+Two:400,400italic' rel='stylesheet' type='text/css'>
-    <link href='http://fonts.googleapis.com/css?family=Great+Vibes' rel='stylesheet' type='text/css'>
-    <link href='http://fonts.googleapis.com/css?family=Cardo:400,400italic' rel='stylesheet' type='text/css'>
+    <link href='//fonts.googleapis.com/css?family=Lobster+Two:400,400italic' rel='stylesheet' type='text/css'>
+    <link href='//fonts.googleapis.com/css?family=Great+Vibes' rel='stylesheet' type='text/css'>
+    <link href='//fonts.googleapis.com/css?family=Cardo:400,400italic' rel='stylesheet' type='text/css'>
     
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
