--- a/lambdaacademy/school/templates/school/pages/module_detail.html
+++ b/lambdaacademy/school/templates/school/pages/module_detail.html
@@ -17,7 +17,7 @@
 		</div>
 		<div class="col-md-9">
 			<p class="lead detail-text">
-				{{ module.description }}
+				{{ module.description|linebreaks }}
 			</p>
 		</div>
 	</div>
